<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="20dp"
            android:indeterminate="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/loadingPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            app:queryHint="Please Type in the name of recipe">

        </SearchView>

        <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
            android:id="@+id/MultiSpinnerCategory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:hintText="Category : none" />

        <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
            android:id="@+id/MultiSpinnerIngredient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:hintText="Ingredient : none" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_title"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="Recipe Name" />

            <RadioButton
                android:id="@+id/radio_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Ingredient" />
        </RadioGroup>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/nav_host_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintVertical_bias="0.0" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>