...
                    android:layout_marginTop="8dp"
                    android:text="Add items"
                    app:layout_constraintStart_toEndOf="@+id/subtractText"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@android:drawable/ic_delete" />
...
